--- a/header.css
+++ b/header.css
@@ -1,17 +1,17 @@
 .navbar-lewagon {
-    justify-content: space-between;
+    justify-content: left;
     background: white;
 
   }
-  
+
   .navbar-lewagon .navbar-collapse {
     flex-grow: 0;
   }
-  
+
   .navbar-lewagon .navbar-brand img {
-    width: 120px;
+    width: 150px;
   }
-  
+
   .nav-bar {
     display: flex;
     justify-content: space-evenly;
@@ -25,7 +25,7 @@
  /* for developemtent only!! */
     background-color: white;
   }
-  
+
   .nav-elements:hover {
     color: black;
     text-decoration: none;
@@ -34,4 +34,3 @@
   .active-breadcrum {
     border-bottom: 5px solid #aa1f20;
   }
-  
