--- a/home.css
+++ b/home.css
@@ -1,4 +1,5 @@
-.card-category {
+
+/* .card-category {
     background-size: cover;
     background-position: center;
     height: 180px;
@@ -12,22 +13,29 @@
     border-radius: 5px;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     margin: 10px;
-  }
+  } */
 .banner {
     background-size: cover;
     background-position: center;
     padding: 200px 0;
+    height: 30%;
+    width: 100%;
   }
-  
-.banner h1 {
+.welcome {
+  position: absolute;
+  left: 8%;
+  top: 20%;
+  padding: 0;
+}
+.welcome h1 {
     margin: 0;
     color: white;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
     font-size: 32px;
     font-weight: bold;
   }
-  
-.banner p {
+
+.welcome p {
     margin: 0;
     font-size: 20px;
     color: white;
@@ -35,54 +43,25 @@
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   }
 
-
-  /* additionals */
-  /* card category */
-  .card-category {
-    background-size: cover;
-    background-position: center;
-    height: 180px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    border-radius: 5px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  }
-  /* card product */
-.card-product {
-    overflow: hidden;
-    height: 30vh;
-    background: white;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    display: flex;
-    align-items: center;
-  }
-  
-  .card-product img {
-    height: 100%;
-    width: 20%;
-    object-fit: cover;
-  }
-  
-  .card-product h2 {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0;
-  }
-  
-  .card-product p {
-    font-size: 12px;
-    line-height: 1.4;
-    opacity: .7;
-    margin-bottom: 0;
-    margin-top: 8px;
-  }
-  
-  .card-product .card-product-infos {
-    padding: 16px;
-  }
-  
+.awards {
+  display: flex;
+  justify-content: space-evenly;
+}
+.awards img {
+  width: 20%;
+}
+.infocard {
+  background-color: rgb(238, 238, 238);
+  padding: 15px;
+  width: 100%;
+  margin: 0;
+}
+.infocardalt {
+  background-color: #FFFFFF;
+  padding: 15px;
+  width: 100%;
+  margin: 0;
+}
+p {
+  font-size: 20px;
+}
