--- a/kontakt.css
+++ b/kontakt.css
@@ -1,18 +1,20 @@
-.mapbox {
-    display: flex;
-  }
-  .map {
-    justify-content: right;
-    margin: 20px;
-    flex-shrink: 1;
-  }
-.card   {
-    padding: 25px;
-    margin: 25px;
-}
-.tobs {
-    width: 50vh;
-}
+
 .disclaimer {
   background-color: bisque;
+  border-radius: 5px;
+  padding: 15px;
+}
+.containerq {
+  margin-right: 0;
+  margin-left: 0;
+  background-color: rgb(238, 238, 238);
+}
+.blind {
+  opacity: 0;
+}
+.map {
+  border-radius: 5px;
+}
+p {
+  font-size: 18px;
 }
