--- a/events.css
+++ b/events.css
@@ -17,3 +17,14 @@ h3 {
   background-color: rgb(238, 238, 238);
 }
 
+.banner {
+    background-size: cover;
+    background-position: center;
+    padding: 200px 0;
+    width: 100%;
+    height: 100%;
+  }
+.item {
+  width: 100%;
+  height:100%;
+}
