--- a/home.css
+++ b/home.css
@@ -1,43 +1,27 @@
-
-/* .card-category {
-    background-size: cover;
-    background-position: center;
-    height: 180px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    border-radius: 5px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    margin: 10px;
-  } */
 .banner {
-    background-size: cover;
-    background-position: center;
-    padding: 200px 0;
-    height: 30%;
-    width: 100%;
-  }
+  background-size: cover;
+  background-position: center;
+  padding: 200px 0;
+  height: 100%;
+  width: 100%;
+}
 .welcome {
   position: absolute;
-  left: 8%;
-  top: 20%;
+  left: 9%;
+  top: 38%;
   padding: 0;
 }
 .welcome h1 {
     margin: 0;
     color: white;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    font-size: 32px;
+    font-size: 35px;
     font-weight: bold;
   }
 
 .welcome p {
     margin: 0;
-    font-size: 20px;
+    font-size: 22px;
     color: white;
     opacity: .7;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
@@ -64,4 +48,34 @@
 }
 p {
   font-size: 20px;
+}
+.item {
+  height: 100%;
+}
+.btn-action {
+  display: inline-block;
+  margin-bottom: 0;
+  margin-top: 12px;
+  font-weight: 450;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  background-image: none;
+  border: 1px solid transparent;
+  padding: 10px 16px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  border-radius: 4px;
+  user-select: none;
+  color: #fff;
+  background-color: #d61c27;
+  border-color: #d61c27;
+  text-decoration: none;
+}
+.btn-action:hover {
+  text-decoration: none;
+  opacity: 0.8;
+  color: #fff;
 }
